k8s_training/part5_contest/resource-silo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resource-silo
  labels:
    app: resource-silo
spec:
  selector:
    app: resource-silo
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  type: ClusterIP
